# fleet-health-copilot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/: copilot-instructions.md
docs/: API.md  architecture.md  aws-deployment-plan.md  backlog-postgres-and-indexing.md  capstone-demo-artifacts.md  demo-runbook.md  github-actions-aws-deploy.md  iam-github-actions.md  presentation-outline.md  presentation-slides.marp.md  (+5 more)
services/orchestrator/: .env.example  Dockerfile  pyproject.toml
services/orchestrator/data/: runbooks.jsonl  runbooks_detailed.jsonl  sample_events.jsonl
services/orchestrator/scripts/: evaluate_pipeline.py  index_documents.py  index_s3_vectors.py  purge_expired_audit.py  replay_events.py
services/orchestrator/src/fleet_health_orchestrator/: __init__.py  agents.py  auth_context.py  chat_orchestrator.py  config.py  dependencies.py  embeddings.py  endpoints.py  exceptions.py  ingestion.py  llm.py  logging_config.py  main.py  mcp_client_adapter.py  metrics.py  middleware.py  models.py  rag.py  repository.py
services/orchestrator/src/fleet_health_orchestrator/migrations/: __init__.py  m001_baseline_tables.py  m002_add_tenant_id.py  m003_audit_events_table.py  m004_tenant_indexes.py  m005_audit_retention_policy.py  runner.py
services/orchestrator/tests/: test_api_contract_snapshots.py  test_chat_orchestrator.py  test_health.py  test_llm_enrichment.py  test_middleware.py  test_migrations.py  test_purge_retention.py  test_runtime_metrics.py
services/orchestrator/tests/snapshots/: api_error_contracts.json
(+97 files in other folders)
