[project]
name = "fleet-health-orchestrator"
version = "0.1.0"
description = "Incident orchestration API for Fleet Health Copilot"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.42.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "uvicorn>=0.31.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0"
]
embeddings = [
  "sentence-transformers>=3.0.0,<4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
